## Change log

### 1.2.1 - In Development
* Fix - Fixed the Post Type enquiry dropdown.

### 1.2.0 - 6 August 2019
* Fix - Hiding the banner title on regions when the map is set to output there.
* Dev - Made sure the regions also move the map to the banner when the setting is activated.
* Dev - PHP Class updates.
* Dev - Removing old templates.
* Dev - Integrated the TO Maps plugin into TO Core.
* Dev - Added in an option to disable the maps.
* Dev - Added in a desktop and mobile map placeholder setting.
* Dev - Added in the bot blocker function for google maps requests.
* Dev - Integrated the TO Videos plugin into TO Core.
* Fix - Fixed the Room Section not collapsing on mobile.
* Fix - Fixed the collapse section title colour on mobile.
* Dev - Added in the region taxonomy for housing the Continent Sub Regions.

### 1.1.5 - 3th July 2019
* Dev - Updated the help page.
* Dev - Updated the Add-Ons page.

### 1.1.4 - 14th June 2019
* Fix - Adding the list of Envira Gallery tags to the wp_kses_post allowed filter method.
* Dev - Added in WPForms Lite as a list of forms to choose for your enquiry.
* Fix - Fixed tours and destinations collapsible tabs on mobile issue.
* Dev - Added in the destinations to the Accommodation and Tour breadcrumbs
* Dev - Changed the widgets and shortcodes images sizes from 'lsx-thumbnail-single' to 'lsx-thumbnail-wide'
* Dev - Added in a filter to allow the extending of fields via 3rd party plugins and themes - 'lsx_to_tours_itinerary_fields'
* Dev - Converted the Shortcode in to a block
* Dev - Updated default text for block and fixing travis issues
* Dev - Changed the attributes from Numbers to strings.
* Dev - Added the taxonomy block and updates

### 1.1.3
* Fix - Cleaning code to meet more Wordpress Standards

### 1.1.2
* Fix - Changing the "id" to avoid cached sites pulling through the same gallery for each destination
* Dev - Added in an option to disable the collapse function on single posts